2001-08-27  Kevin Vandersloot <kfv101@psu.edu>

	* callbacks.c: mark the author strings for translation
	Fixes bug #59595.

2001-08-26  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: connect to "close" signal for renice dialog.
	Don't popup a new dialog if another already exists.

	* favorites.c: again connect to "close" signal, and only
	do gnome_dialog_close if the close button is pressed.

2001-08-25  Kevin Vandersloot <kfv101@psu.edu>

	Fix bug #59548 by only showing utf8 names for the e-tree
	* procman.h: add name_utf8 string to ProcInfo structure

	* proctable.c (get_name): do the utf8 thing on the name for the
	name_utf8 string and g_strdup the name for the info->name
	(proctable_get_value): return info->name_utf8 here instead
	of info->name.

2001-08-25  Kevin Vandersloot <kfv101@psu.edu>

	* memmaps.c: connect to the "close" signal since "destroy" was
	causing corruption when save the e-tree state file. Try to
	raise the dialog if it already exists. For the close button
	just call gnome_dialog_close, don't call it in the "close" 
	signal handler. Clear the memmaps data at close time

2001-08-24  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: add a Kill Process item to right click
	menu because there are times when it is needed.

	* procactions.c (kill_process): add an extra argument to
	determine the signal sent.

	* callbacks.c: add popup_menu_end_process to send SIGTERM and
	change popup_menu_kill_process to send SIGKILL and ignore the
	warning dialog.

	* procdialogs.c: call kill_process with SIGTERM.

2001-08-24  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: Put disks updating on timeout. Move mount 
	directory to the last column of the clist since it is the 
	least interesting.

	* procman.[c,h]: new config value for the graph updating
	interval. Remove the g_free to the e-tree state save file
	names since I think that may be why procman leaves behind
	weird files.

	* load-graph.c: use the new timeout config variable for the