@@ -503,14 +503,14 @@ get_size_string (gint size)
 
 	fsize = (gfloat) size;
 	if (fsize < 1024.0) 
-		return g_strdup_printf ("%d K", (int)fsize);
+		return g_strdup_printf (_("%d K"), (int)fsize);
 		
 	fsize /= 1024.0;
 	if (fsize < 1024.0)
-		return g_strdup_printf ("%.2f MB", fsize);
+		return g_strdup_printf (_("%.2f MB"), fsize);
 	
 	fsize /= 1024.0;
-	return g_strdup_printf ("%.2f GB", fsize);
+	return g_strdup_printf (_("%.2f GB"), fsize);
 
 }
 
