@@ -1,5 +1,10 @@
 2001-08-27  Kevin Vandersloot <kfv101@psu.edu>
 
+	* infoview.c, callbacks.c, load-graph.c: mark the memory size
+	strings for translation. bug #59597
+
+2001-08-27  Kevin Vandersloot <kfv101@psu.edu>
+
 	* callbacks.c: mark the author strings for translation
 	Fixes bug #59595.
 
